Finish mobile views

--- a/source/candidate-offer.html.erb
+++ b/source/candidate-offer.html.erb
@@ -11,64 +11,21 @@ title: Silkroad - Candidate Offer
 </div>
 
 <div class="s-tab">
-  <a href="" class="s-tab__item">
+  <a href="/candidate-welcome.html" class="s-tab__item">
     Welcome
   </a>
-  <a href="" class="s-tab__item s-tab__item--active">
+  <a href="/candidate-offer.html" class="s-tab__item s-tab__item--active">
     Your Offer
   </a>
-  <a href="" class="s-tab__item">
+  <a href="/candidate-work-life.html" class="s-tab__item">
     Work Life
   </a>
 </div>
 
 <div class="s-wrapper">
-  <div class="s-hero s-hero--candidate-offer">
-    <div class="s-hero__content">
-      <h1>Join the Digital Payments Revolution</h1>
-      <p>
-        At PayPal, we are reimagining money, democratizing financial services, and giving people more ways
-to safely connect to their money and to each other. We are purpose-driven and looking for people
-who want to join us at the forefront of the digital payments revolution.
-      </p>
-    </div>
+  <div class="s-iframe-container">
+    <iframe src="http://www.espn.com/">
+      <p>Your browser does not support iframes.</p>
+    </iframe>
   </div>
 </div>
-<div class="s-wrapper">
-  <div class="s-card__container">
-    <div class="s-card">
-      <div class="s-card__image">
-        <img src="images/your-mission-bg.png" alt="Our Mission" />
-      </div>
-      <div class="s-card__footer">
-        Our Mission
-      </div>
-    </div>
-    <div class="s-card">
-      <div class="s-card__image">
-        <img src="images/our-office-bg.png" alt="Our Office" />
-      </div>
-      <div class="s-card__footer">
-        Our Offices
-      </div>
-    </div>
-    <div class="s-card">
-      <div class="s-card__image">
-        <img src="images/your-role-bg.png" alt="Your Role" />
-      </div>
-      <div class="s-card__footer">
-        Your Role
-      </div>
-    </div>
-    <div class="s-card">
-      <div class="s-card__image">
-        <img src="images/employee-perks-bg.png" alt="Employee Perks" />
-      </div>
-      <div class="s-card__footer">
-        Employee Perks
-      </div>
-    </div>
-  </div>
-</div>
-<br />
-<br />
