--- a/source/candidate-welcome.html.erb
+++ b/source/candidate-welcome.html.erb
@@ -11,13 +11,13 @@ title: Silkroad - Candidate Welcome
 </div>
 
 <div class="s-tab">
-  <a href="" class="s-tab__item s-tab__item--active">
+  <a href="/candidate-welcome.html" class="s-tab__item s-tab__item--active">
     Welcome
   </a>
-  <a href="" class="s-tab__item">
+  <a href="/candidate-offer.html" class="s-tab__item">
     Your Offer
   </a>
-  <a href="" class="s-tab__item">
+  <a href="/candidate-work-life.html" class="s-tab__item">
     Work Life
   </a>
 </div>
