Update offers view

--- a/source/offers-page.html.erb
+++ b/source/offers-page.html.erb
@@ -24,9 +24,9 @@ title: Silkroad - Offers Page
         </a>
       </div>
       <div class="s-menu">
-        <a href="#" class="s-menu__item">Option 1</a>
-        <a href="#" class="s-menu__item s-menu__item--selected">Option 2</a>
-        <a href="#" class="s-menu__item">Option 3</a>
+        <a href="#" class="s-menu__item">Settings</a>
+        <a href="#" class="s-menu__item s-menu__item--selected">Templates</a>
+        <a href="#" class="s-menu__item">Import</a>
       </div>
     </div>
   </div>
@@ -51,7 +51,7 @@ title: Silkroad - Offers Page
         </div>
         <div class="s-offer__template-footer">
           <h5>
-            New Offer Letter
+            New Offer
           </h5>
         </div>
       </a>
@@ -63,7 +63,7 @@ title: Silkroad - Offers Page
         </div>
         <div class="s-offer__template-footer">
           <h5>
-            Sales Offer Letter 1
+            New Template
           </h5>
         </div>
       </a>
