Add new data view

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,6 +15,8 @@ title: Silkroad - UI List
   <br />
   <a href="template-list.html">Template List</a>
   <br />
+  <a href="new-data.html">New Data</a></a>
+  <br />
   <a href="offers-page.html">Offers Page</a>
   <br />
   <a href="new-offer.html">New Offer</a>
