Add new data views

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,6 +17,12 @@ title: Silkroad - UI List
   <br />
   <a href="new-data.html">New Data</a></a>
   <br />
+  <a href="new-upload.html">New Upload</a></a>
+  <br />
+  <a href="new-upload-progress.html">New Upload Progress</a></a>
+  <br />
+  <a href="new-upload-attached.html">New Upload Attached</a></a>
+  <br />
   <a href="offers-page.html">Offers Page</a>
   <br />
   <a href="new-offer.html">New Offer</a>
