--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -114,6 +114,12 @@ hr
     &:hover
       background: darken($green-blue, 5%)
 
+  &--gray
+    background: darken($gray, 20%)
+
+    &:hover
+      background: darken($gray, 30%)
+
   &--large
     height: 4.8rem
 
