Add template views

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,6 +15,18 @@ title: Silkroad - UI List
   <br />
   <a href="template-list.html">Template List</a>
   <br />
+  <a href="new-template.html">New Template</a>
+  <br />
+  <a href="new-template-progress.html">New Template Progress</a>
+  <br />
+  <a href="new-template-added.html">New Template Added</a>
+  <br />
+  <a href="new-template-add-fields.html">New Template Add Fields</a>
+  <br />
+  <a href="new-template-details.html">New Template Details</a>
+  <br />
+  <a href="template-preview.html">Template Preview</a>
+  <br />
   <a href="new-data.html">New Data</a></a>
   <br />
   <a href="new-upload.html">New Upload</a></a>
