Update offer page for sprint 3

--- a/source/offers-page.html.erb
+++ b/source/offers-page.html.erb
@@ -24,9 +24,9 @@ title: Silkroad - Offers Page
         </a>
       </div>
       <div class="s-menu">
-        <a href="#" class="s-menu__item">Settings</a>
-        <a href="#" class="s-menu__item s-menu__item--selected">Templates</a>
-        <a href="#" class="s-menu__item">Import</a>
+        <a href="#" class="s-menu__item s-menu__item--selected">Settings</a>
+        <a href="#" class="s-menu__item">Support</a>
+        <a href="#" class="s-menu__item">Training</a>
       </div>
     </div>
   </div>
@@ -63,7 +63,19 @@ title: Silkroad - Offers Page
         </div>
         <div class="s-offer__template-footer">
           <h5>
-            New Template
+            New Sales Offer Letter 1
+          </h5>
+        </div>
+      </a>
+      <a class="s-offer__template" href="">
+        <div class="s-offer__template-content">
+          <i class="material-icons">
+            insert_drive_file
+          </i>
+        </div>
+        <div class="s-offer__template-footer">
+          <h5>
+            CS Offer Letter
           </h5>
         </div>
       </a>
@@ -107,7 +119,7 @@ title: Silkroad - Offers Page
             </div>
           </td>
           <td>Some Job Title</td>
-          <td>Taylor Philips</td>
+          <td>Sean Taylor</td>
           <td>Me</td>
           <td>Jun 9</td>
         </tr>
@@ -119,7 +131,7 @@ title: Silkroad - Offers Page
             </div>
           </td>
           <td>Some Job Title</td>
-          <td>Taylor Philips</td>
+          <td>Jane Doe</td>
           <td>Me</td>
           <td>Jun 9</td>
         </tr>
@@ -131,7 +143,7 @@ title: Silkroad - Offers Page
             </div>
           </td>
           <td>Some Job Title</td>
-          <td>Taylor Philips</td>
+          <td>Michael Smith</td>
           <td>Me</td>
           <td>Jun 9</td>
         </tr>
@@ -143,7 +155,7 @@ title: Silkroad - Offers Page
             </div>
           </td>
           <td>Some Job Title</td>
-          <td>Taylor Philips</td>
+          <td>Lisa Williams</td>
           <td>Me</td>
           <td>Jun 9</td>
         </tr>
@@ -155,11 +167,11 @@ title: Silkroad - Offers Page
             </div>
           </td>
           <td>Some Job Title</td>
-          <td>Taylor Philips</td>
+          <td>Anglea West</td>
           <td>Me</td>
           <td>Jun 9</td>
         </tr>
-        <tr class="s-manage-offers__details">
+        <!-- <tr class="s-manage-offers__details">
           <td colspan="5">
             <div class="s-manage-offers__details-content">
               <div>
@@ -201,7 +213,7 @@ title: Silkroad - Offers Page
               </div>
             </div>
           </td>
-        </tr>
+        </tr> -->
       </table>
     </div>
   </div>
