Start sprint 3 settings view

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,6 +5,8 @@ title: Silkroad - UI List
 <div class="s-wrapper" style="padding: 20px">
   <a href="ui.html">UI</a>
   <br />
+  <a href="settings.html">Settings</a>
+  <br />
   <a href="candidate-welcome.html">Candidate Welcome</a>
   <br />
   <a href="candidate-offer.html">Candidate Offer</a>
