--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -946,6 +946,25 @@ hr
   .s-wrapper
     max-width: 74rem
 
+// Settings
+.s-settings
+
+  h1
+    border-bottom: .2rem solid $gray
+    padding: 2rem 0
+    display: inline-block
+
+  &__content
+    background: $white
+
+  &__header
+    border-bottom: 0.1rem solid $medium-gray
+    padding: 0 4rem
+
+  &__section
+    padding: 0 4rem
+
+
 // Media Queries
 @media screen and (max-width: 600px)
 
