Finish Settings views

--- a/source/settings.html.erb
+++ b/source/settings.html.erb
@@ -60,7 +60,7 @@ title: Silkroad - Settings
             <p>
               Your logo will be displayed in emails and the candidate portal. The image file should be in JPG< SVG or PNG format, up to 400 x 400 pixels.
             </p>
-            <div class="s-two-column">
+            <div class="s-two-column s-two-column--vertical-center">
               <div class="s-column">
                 <input type="file"  />
               </div>
@@ -81,6 +81,7 @@ title: Silkroad - Settings
           <div class="s-column"></div>
         </div>
       </div>
+      <br/>
       <!-- Set Color -->
       <div class="s-settings__section">
         <h3>Set a Color</h3>
@@ -90,6 +91,7 @@ title: Silkroad - Settings
           </div>
         </div>
       </div>
+      <br />
       <!-- Upload Hero -->
       <div class="s-settings__section">
         <div class="s-two-column">
@@ -98,7 +100,7 @@ title: Silkroad - Settings
             <p>
               Your portal image will be displayed in the candidate portal. The image should not have any text. The file should be in SVG, PNG or JPG format, up to 2000 x 2000 pixels.
             </p>
-            <div class="s-two-column">
+            <div class="s-two-column s-two-column--vertical-center">
               <div class="s-column">
                 <input type="file"  />
               </div>
@@ -113,6 +115,7 @@ title: Silkroad - Settings
           <div class="s-column"></div>
         </div>
       </div>
+      <br />
       <!-- Hero Statement -->
       <div class="s-settings__section">
         <div class="s-two-column">
@@ -158,7 +161,8 @@ title: Silkroad - Settings
             <p>
               Add a welcome message to be displayed to all candidates prior to reviewing a document for signature.
             </p>
-            <h3 >Add Your Message</h3>
+            <br />
+            <h3>Add Your Message</h3>
             <p>
               Your message will be displayed in the candidate portal, is text only and should be no longer than X characters.
             </p>
