--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -7,6 +7,8 @@ title: Silkroad - UI List
   <br />
   <a href="settings.html">Settings</a>
   <br />
+  <a href="settings-add-page.html">Settings Add Page</a>
+  <br />
   <a href="candidate-welcome.html">Candidate Welcome</a>
   <br />
   <a href="candidate-offer.html">Candidate Offer</a>
