--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -130,6 +130,9 @@ hr
       font-size: 1.6rem
       margin-right: 1rem
 
+  &--full-width
+    width: 100%
+
 // Helpers
 .s-align-center
   text-align: center
