--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -11,6 +11,8 @@ title: Silkroad - UI List
   <br />
   <a href="settings-edit-page.html">Settings Edit Page</a>
   <br />
+  <a href="settings-content.html">Settings Content</a>
+  <br />
   <a href="candidate-welcome.html">Candidate Welcome</a>
   <br />
   <a href="candidate-offer.html">Candidate Offer</a>
