--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,6 +13,8 @@ title: Silkroad - UI List
   <br />
   <a href="settings-content.html">Settings Content</a>
   <br />
+  <a href="candidate-board.html">Candidate Board</a>
+  <br />
   <a href="candidate-welcome.html">Candidate Welcome</a>
   <br />
   <a href="candidate-offer.html">Candidate Offer</a>
