Add Page Confirmation view

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,6 +15,8 @@ title: Silkroad - UI List
   <br />
   <a href="candidate-board.html">Candidate Board</a>
   <br />
+  <a href="settings-page-confirmation.html">Settings Content</a>
+  <br />
   <a href="candidate-welcome.html">Candidate Welcome</a>
   <br />
   <a href="candidate-offer.html">Candidate Offer</a>
