--- a/source/settings-page-confirmation.html.erb
+++ b/source/settings-page-confirmation.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Silkroad - Settings Add Page
+title: Silkroad - Settings Page Confirmation
 ---
 
 <div class="s-nav">
@@ -77,6 +77,9 @@ or banner image.
           </i>
         </div>
         <button class="s-button s-button--large s-button--full-width">Publish</button>
+        <div class="s-align-center">
+          <h4>Success! You page is live!</h4>
+        </div>
       </div>
     </div>
   </div>
